Added resume and linkedin link

--- a/index.html
+++ b/index.html
@@ -62,15 +62,15 @@
         </div>
         <div class="brief-me">
           <p>
-            I am an experimental technical writer who plays a lot in the terminal. I
-            not only write, but also code and hack things. <br />Learn more
-            <a href="./about.html">about me</a>.
+            I am an experimental technical writer who plays a lot in the
+            terminal. I not only write, but also code and hack things.
+            <br />Learn more <a href="./about.html">about me</a>.
           </p>
         </div>
         <div class="resource-tracker"></div>
         <div class="tab-div">
           <div>
-            <a href="https://www.linkedin.com/in/manuel-smith" target="_blank"
+            <a href="https://www.linkedin.com/in/manuelr-smith" target="_blank"
               >Let's Connect</a
             >
             <img
@@ -93,137 +93,206 @@
         </div>
       </div>
       <div class="resources-links">
-        <div class="portfolio-section"><h1>Projects</h1></div> 
+        <div class="portfolio-section"><h1>Projects</h1></div>
         <div class="resources">
           <div class="resource-image">
-            <img src="./resources/resource-images/1.png" alt="">
+            <img src="./resources/resource-images/1.png" alt="" />
           </div>
           <div class="resource-copy">
             <h1>System Configurations</h1>
-            <p>As an open-source load balancer and proxy server software, HAproxy distributes inbound web traffic across multiple backend servers in a server farm, improving reliability, scalability, and high availability of web applications. <br><br>This article demonstrates my ability to work with reverse proxies and how one may configure HAproxy in a Linux environment.</p>
+            <p>
+              As an open-source load balancer and proxy server software, HAproxy
+              distributes inbound web traffic across multiple backend servers in
+              a server farm, improving reliability, scalability, and high
+              availability of web applications. <br /><br />This article
+              demonstrates my ability to work with reverse proxies and how one
+              may configure HAproxy in a Linux environment.
+            </p>
             <h2>Skilled Demonstrated</h2>
             <ul>
-              <li><span class="material-symbols-outlined">
-                check_box
-                </span>Command line Mastery</li>
-              <li><span class="material-symbols-outlined">
-                check_box
-                </span>Layer 4 and 7 load balancing</li>
-              <li><span class="material-symbols-outlined">
-                check_box
-                </span>Linux</li>
-              <li><span class="material-symbols-outlined">
-                check_box
-                </span>Networking</li>
-              <li><span class="material-symbols-outlined">
-                check_box
-                </span>UX writing</li>
-              <li><span class="material-symbols-outlined">
-                check_box
-                </span>Web security and Access control</li>
+              <li>
+                <span class="material-symbols-outlined"> check_box </span
+                >Command line Mastery
+              </li>
+              <li>
+                <span class="material-symbols-outlined"> check_box </span>Layer
+                4 and 7 load balancing
+              </li>
+              <li>
+                <span class="material-symbols-outlined"> check_box </span>Linux
+              </li>
+              <li>
+                <span class="material-symbols-outlined"> check_box </span
+                >Networking
+              </li>
+              <li>
+                <span class="material-symbols-outlined"> check_box </span>UX
+                writing
+              </li>
+              <li>
+                <span class="material-symbols-outlined"> check_box </span>Web
+                security and Access control
+              </li>
             </ul>
-            <a href="./docs/haproxy-configurations.html">Read Article</a>          
+            <a href="./docs/haproxy-configurations.html">Read Article</a>
           </div>
         </div>
         <div class="resources">
           <div class="resource-image">
-            <img src="./resources/resource-images/3.png" alt="">
+            <img src="./resources/resource-images/3.png" alt="" />
           </div>
           <div class="resource-copy">
             <h1>Software Documentation</h1>
-            <p>Manterminal is a personal project that emulates command line utilities. Instead of entering commands in a shell or terminal, a user enters them in the commands.txt file. This utility is still in development, but documenting its progress is worthwhile. <br><br>Here, I demonstrate my ability to document software source code and APIs, write software programs in Node.js, and work with version control tools like Git and GitHub.</p>
+            <p>
+              Manterminal is a personal project that emulates command line
+              utilities. Instead of entering commands in a shell or terminal, a
+              user enters them in the commands.txt file. This utility is still
+              in development, but documenting its progress is worthwhile.
+              <br /><br />Here, I demonstrate my ability to document software
+              source code and APIs, write software programs in Node.js, and work
+              with version control tools like Git and GitHub.
+            </p>
             <h2>Skilled Demonstrated</h2>
             <ul>
-              <li><span class="material-symbols-outlined">
-                check_box
-                </span>Source code documentation</li>
-              <li><span class="material-symbols-outlined">
-                check_box
-                </span>API documentation</li>
-              <li><span class="material-symbols-outlined">
-                check_box
-                </span>Programming in Node.js</li>
-              <li><span class="material-symbols-outlined">
-                check_box
-                </span>Git & GitHub</li>
-              <li><span class="material-symbols-outlined">
-                check_box
-                </span>UX writing</li>
-              <li><span class="material-symbols-outlined">
-                check_box
-                </span>Research</li>
+              <li>
+                <span class="material-symbols-outlined"> check_box </span>Source
+                code documentation
+              </li>
+              <li>
+                <span class="material-symbols-outlined"> check_box </span>API
+                documentation
+              </li>
+              <li>
+                <span class="material-symbols-outlined"> check_box </span
+                >Programming in Node.js
+              </li>
+              <li>
+                <span class="material-symbols-outlined"> check_box </span>Git &
+                GitHub
+              </li>
+              <li>
+                <span class="material-symbols-outlined"> check_box </span>UX
+                writing
+              </li>
+              <li>
+                <span class="material-symbols-outlined"> check_box </span
+                >Research
+              </li>
             </ul>
-            <a href="#">Read Article</a>          
+            <a href="#">Read Article</a>
           </div>
         </div>
         <div class="resources">
           <div class="resource-image">
-            <img src="./resources/resource-images/2.png" alt="">
+            <img src="./resources/resource-images/2.png" alt="" />
           </div>
           <div class="resource-copy">
             <h1>Installation Guide</h1>
-            <p>Smoothwall is an open-source Linux-based firewall software that protects networks from unauthorized access and malicious payloads. This article demonstrates how to install Smoothwall in Oracle's VirtualBox and also configure its networking so it has access to the internet. <br><br>Here, I demonstrate my prowess in working with hypervisor software and the ability to craft concise installation guides on bare-metal, virtual machines, and cloud platforms.</p>
+            <p>
+              Smoothwall is an open-source Linux-based firewall software that
+              protects networks from unauthorized access and malicious payloads.
+              This article demonstrates how to install Smoothwall in Oracle's
+              VirtualBox and also configure its networking so it has access to
+              the internet. <br /><br />Here, I demonstrate my prowess in
+              working with hypervisor software and the ability to craft concise
+              installation guides on bare-metal, virtual machines, and cloud
+              platforms.
+            </p>
             <h2>Skilled Demonstrated</h2>
             <ul>
-              <li><span class="material-symbols-outlined">
-                check_box
-                </span>Virtualization</li>
-              <li><span class="material-symbols-outlined">
-                check_box
-                </span>Configuring Networks</li>
-              <li><span class="material-symbols-outlined">
-                check_box
-                </span>UX writing</li>
-              <li><span class="material-symbols-outlined">
-                check_box
-                </span>Networking</li>
-              <li><span class="material-symbols-outlined">
-                check_box
-                </span>Research</li>
-              <li><span class="material-symbols-outlined">
-                check_box
-                </span>Content planning</li>
+              <li>
+                <span class="material-symbols-outlined"> check_box </span
+                >Virtualization
+              </li>
+              <li>
+                <span class="material-symbols-outlined"> check_box </span
+                >Configuring Networks
+              </li>
+              <li>
+                <span class="material-symbols-outlined"> check_box </span>UX
+                writing
+              </li>
+              <li>
+                <span class="material-symbols-outlined"> check_box </span
+                >Networking
+              </li>
+              <li>
+                <span class="material-symbols-outlined"> check_box </span
+                >Research
+              </li>
+              <li>
+                <span class="material-symbols-outlined"> check_box </span
+                >Content planning
+              </li>
             </ul>
-            <a href="./docs/installation.html">Read Article</a>          
+            <a href="./docs/installation.html">Read Article</a>
           </div>
         </div>
         <div class="resources">
           <div class="resource-image">
-            <img src="./resources/resource-images/4.png" alt="">
+            <img src="./resources/resource-images/4.png" alt="" />
           </div>
           <div class="resource-copy">
             <h1>Diagramming & Visualization</h1>
-            <p>Graphical illustrations are essential when representing complex data flows, network traffic, and the topology of network infrastructure. Diagrams visualize complex ideas and concepts, leading to better decision-making. <br><br>Here, I demonstrate my ability to design classical UML models using diagramming tools and simulating packet transmission between network nodes using the Cisco Packet tracer.</p>
+            <p>
+              Graphical illustrations are essential when representing complex
+              data flows, network traffic, and the topology of network
+              infrastructure. Diagrams visualize complex ideas and concepts,
+              leading to better decision-making. <br /><br />Here, I demonstrate
+              my ability to design classical UML models using diagramming tools
+              and simulating packet transmission between network nodes using the
+              Cisco Packet tracer.
+            </p>
             <h2>Skilled Demonstrated</h2>
             <ul>
-              <li><span class="material-symbols-outlined">
-                check_box
-                </span>UML Diagramming</li>
-              <li><span class="material-symbols-outlined">
-                check_box
-                </span>Architecture Visualization</li>
-              <li><span class="material-symbols-outlined">
-                check_box
-                </span>Network Simulations</li>
-              <li><span class="material-symbols-outlined">
-                check_box
-                </span>Graphical illustration</li>
-              <li><span class="material-symbols-outlined">
-                check_box
-                </span>UX writing</li>
-              <li><span class="material-symbols-outlined">
-                check_box
-                </span>Research</li>
+              <li>
+                <span class="material-symbols-outlined"> check_box </span>UML
+                Diagramming
+              </li>
+              <li>
+                <span class="material-symbols-outlined"> check_box </span
+                >Architecture Visualization
+              </li>
+              <li>
+                <span class="material-symbols-outlined"> check_box </span
+                >Network Simulations
+              </li>
+              <li>
+                <span class="material-symbols-outlined"> check_box </span
+                >Graphical illustration
+              </li>
+              <li>
+                <span class="material-symbols-outlined"> check_box </span>UX
+                writing
+              </li>
+              <li>
+                <span class="material-symbols-outlined"> check_box </span
+                >Research
+              </li>
             </ul>
-            <a href="#">Read Article</a>          
+            <a href="#">Read Article</a>
           </div>
         </div>
       </div>
       <footer>
         <h1>Manuel Smith</h1>
-        <p>Technical Writer and Node.Js Developer:  <span><a href="mailto:manuel@cranelux.com">manuel@cranelux.com</a></span></p>
+        <p>
+          Technical Writer and Node.Js Developer:
+          <span
+            ><a href="mailto:manuel@cranelux.com">manuel@cranelux.com</a></span
+          >
+        </p>
         <p><a href="#">Terms</a> | <a href="#">Privacy</a></p>
-        <p><a href="https://www.linkedin.com/in/manuel-smith/" target="_blank">Linkedin</a> | <a href="https://github.com/Manuel-Smith" target="_blank">GitHub</a> | <a href="https://www.codewars.com/users/Manuel-smith" target="_blank">CodeWars</a></p>
+        <p>
+          <a href="https://www.linkedin.com/in/manuel-smith/" target="_blank"
+            >Linkedin</a
+          >
+          |
+          <a href="https://github.com/Manuel-Smith" target="_blank">GitHub</a> |
+          <a href="https://www.codewars.com/users/Manuel-smith" target="_blank"
+            >CodeWars</a
+          >
+        </p>
       </footer>
     </main>
 
