added content for manterminal

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                 >Research
               </li>
             </ul>
-            <a href="#">Read Article</a>
+            <a href="./docs/manterminal-software.html">Read Article</a>
           </div>
         </div>
         <div class="resources">
