--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header>
       <div class="margin-sides header-holder">
         <div class="icon-frame">
-          <a href="/">
+          <a href="/portfolio">
             <img class="logo" src="./images/logo.png" alt="logo" width="60px"
           /></a>
         </div>
