--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="fo-verify" content="8de85207-f9af-49d1-9f28-756f2a8e6d87" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Manuel Smith</title>
     <link rel="stylesheet" href="main.css" />
