changed article descriptions

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Manuel Smith</title>
+    <title>Manuel N Precious</title>
     <link rel="stylesheet" href="main.css" />
     <link rel="stylesheet" href="utilities.css" />
     <link
@@ -28,7 +28,7 @@
           /></a>
         </div>
         <div class="mini-menu">
-          <button class="tab-buttons">LinkedIn</button>
+          <button class="tab-buttons">YouTube</button>
           <button class="tab-buttons active">Resume</button>
           <button class="tab-buttons">GitHub</button>
         </div>
@@ -43,12 +43,6 @@
               <span class="material-symbols-outlined"> home </span>
               <a href="/">Home</a>
             </li>
-            <li>
-              <span class="material-symbols-outlined">
-                supervised_user_circle
-              </span>
-              <a href="/about.html">About</a>
-            </li>
           </ul>
         </div>
       </div>
@@ -58,13 +52,13 @@
         <div class="my-name">Hi, I'm Manuel.</div>
         <div class="location">
           <span class="material-symbols-outlined"> location_on </span>
-          <p>Salt Lake City, UT</p>
+          <p>Remote</p>
         </div>
         <div class="brief-me">
           <p>
-            I am an experimental technical writer who plays a lot in the
-            terminal. I not only write, but also code and hack things.
-            <br />Learn more <a href="./about.html">about me</a>.
+            I am a Software Engineer, primarily Node.js and Python. I love and
+            live coding, but it doesn't hurt sharing my years' wealth of
+            experience with other developers. Got an exciting offer? Let's connect.
           </p>
         </div>
         <div class="resource-tracker"></div>
@@ -93,26 +87,28 @@
         </div>
       </div>
       <div class="resources-links">
-        <div class="portfolio-section"><h1>Projects</h1></div>
+        <div class="portfolio-section"><h1>Guides</h1></div>
         <div class="resources">
           <div class="resource-image">
             <img src="./resources/resource-images/1.png" alt="" />
           </div>
           <div class="resource-copy">
-            <h1>System Configurations</h1>
+            <h1>Load Balancing With HAproxy</h1>
             <p>
-              As an open-source load balancer and proxy server software, HAproxy
-              distributes inbound web traffic across multiple backend servers in
-              a server farm, improving reliability, scalability, and high
-              availability of web applications. <br /><br />This article
-              demonstrates my ability to work with reverse proxies and how one
-              may configure HAproxy in a Linux environment.
+              So, what is a load balancer and Why HAproxy?
+              <br /><br />
+              A load balancer distributes inbound web traffic across multiple
+              backend servers in a data center, with the sole purpose of
+              scalability, and high availability of web applications.
+              <br /><br />
+              But, how do we distribute web traffic across a server pool? Well
+              that's what this article is about?
             </p>
-            <h2>Skilled Demonstrated</h2>
+            <h2>Prerequisites</h2>
             <ul>
               <li>
-                <span class="material-symbols-outlined"> check_box </span
-                >Command line Mastery
+                <span class="material-symbols-outlined"> check_box </span>Bash
+                shell familiarity
               </li>
               <li>
                 <span class="material-symbols-outlined"> check_box </span>Layer
@@ -125,14 +121,6 @@
                 <span class="material-symbols-outlined"> check_box </span
                 >Networking
               </li>
-              <li>
-                <span class="material-symbols-outlined"> check_box </span>UX
-                writing
-              </li>
-              <li>
-                <span class="material-symbols-outlined"> check_box </span>Web
-                security and Access control
-              </li>
             </ul>
             <a href="./docs/haproxy-configurations.html">Read Article</a>
           </div>
@@ -142,7 +130,7 @@
             <img src="./resources/resource-images/3.png" alt="" />
           </div>
           <div class="resource-copy">
-            <h1>Software Documentation</h1>
+            <h1>Nodejs Commandline Emulator Docs</h1>
             <p>
               Manterminal is a personal project that emulates command line
               utilities. Instead of entering commands in a shell or terminal, a
@@ -163,17 +151,14 @@
                 documentation
               </li>
               <li>
-                <span class="material-symbols-outlined"> check_box </span
-                >Programming in Node.js
+                <span class="material-symbols-outlined"> check_box </span>Fs
+                Navigation and Mastery
               </li>
               <li>
                 <span class="material-symbols-outlined"> check_box </span>Git &
                 GitHub
               </li>
-              <li>
-                <span class="material-symbols-outlined"> check_box </span>UX
-                writing
-              </li>
+
               <li>
                 <span class="material-symbols-outlined"> check_box </span
                 >Research
@@ -208,10 +193,7 @@
                 <span class="material-symbols-outlined"> check_box </span
                 >Configuring Networks
               </li>
-              <li>
-                <span class="material-symbols-outlined"> check_box </span>UX
-                writing
-              </li>
+
               <li>
                 <span class="material-symbols-outlined"> check_box </span
                 >Networking
@@ -228,66 +210,21 @@
             <a href="./docs/installation.html">Read Article</a>
           </div>
         </div>
-        <div class="resources">
-          <div class="resource-image">
-            <img src="./resources/resource-images/4.png" alt="" />
-          </div>
-          <div class="resource-copy">
-            <h1>Diagramming & Visualization</h1>
-            <p>
-              Graphical illustrations are essential when representing complex
-              data flows, network traffic, and the topology of network
-              infrastructure. Diagrams visualize complex ideas and concepts,
-              leading to better decision-making. <br /><br />Here, I demonstrate
-              my ability to design classical UML models using diagramming tools
-              and simulating packet transmission between network nodes using the
-              Cisco Packet tracer.
-            </p>
-            <h2>Skilled Demonstrated</h2>
-            <ul>
-              <li>
-                <span class="material-symbols-outlined"> check_box </span>UML
-                Diagramming
-              </li>
-              <li>
-                <span class="material-symbols-outlined"> check_box </span
-                >Architecture Visualization
-              </li>
-              <li>
-                <span class="material-symbols-outlined"> check_box </span
-                >Network Simulations
-              </li>
-              <li>
-                <span class="material-symbols-outlined"> check_box </span
-                >Graphical illustration
-              </li>
-              <li>
-                <span class="material-symbols-outlined"> check_box </span>UX
-                writing
-              </li>
-              <li>
-                <span class="material-symbols-outlined"> check_box </span
-                >Research
-              </li>
-            </ul>
-            <a href="#">Read Article</a>
-          </div>
-        </div>
       </div>
       <footer>
-        <h1>Manuel Smith</h1>
+        <h1>Manuel N Precious</h1>
         <p>
-          Technical Writer and Node.Js Developer:
+          Software Engineer | NodeJs & Python:
           <span
-            ><a href="mailto:riddicksmith37@gmail.com"
-              >riddicksmith37@gmail.com</a
+            ><a href="mailto:manuel@devmanuel.com"
+              >manuel@devmanuel.com</a
             ></span
           >
         </p>
         <p><a href="#">Terms</a> | <a href="#">Privacy</a></p>
         <p>
-          <a href="https://www.linkedin.com/in/manuel-smith/" target="_blank"
-            >Linkedin</a
+          <a href="https://www.youtube.com/in/devmanuel/" target="_blank"
+            >YouTube</a
           >
           |
           <a href="https://github.com/Manuel-Smith" target="_blank">GitHub</a> |
