--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </header>
     <main class="margin-sides">
       <div class="hero-section">
-        <div class="my-name">Hi, I'm Manuel.</div>
+        <div class="my-name">Hy!, I'm Manuel.</div>
         <div class="location">
           <span class="material-symbols-outlined"> location_on </span>
           <p>Remote</p>
