porfolio comment update, home page

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <header>
       <div class="margin-sides header-holder">
         <div class="icon-frame">
-          <a href="/portfolio">
+          <a href="/">
             <img class="logo" src="./images/logo.png" alt="logo" width="60px"
           /></a>
         </div>
