linux to youtube image update

--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
               >Let's Connect</a
             >
             <img
-              src="./images/linkedin-profile.png"
-              alt="linkedin profile image"
+              src="./images/youtube.jpg"
+              alt="YouTube profile image"
             />
           </div>
           <div class="active">
