social icon update

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div class="resource-tracker"></div>
         <div class="tab-div">
           <div>
-            <a href="https://www.linkedin.com/in/manuelr-smith" target="_blank"
+            <a href="https://www.youtube.com/@nmprecious" target="_blank"
               >Let's Connect</a
             >
             <img
@@ -224,7 +224,7 @@
         </p>
         <p><a href="#">Terms</a> | <a href="#">Privacy</a></p>
         <p>
-          <a href="https://www.youtube.com/in/devmanuel/" target="_blank"
+          <a href="https://www.youtube.com/@nmprecious" target="_blank"
             >YouTube</a
           >
           |
